--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -29,6 +29,7 @@ Plugin_store_csv.man \
 Plugin_store_flatfile.man \
 Plugin_store_sos.man \
 Plugin_lustre2_client.man \
+Plugin_opa2.man \
 Plugin_vmstat.man
 
 if ENABLE_ARRAY_EXAMPLE
