ldms: manpage update due to ldms_auth
Update various manpages affected by the new `ldms_auth`.

--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -10,6 +10,8 @@ ldmsctl.man
 
 dist_man7_MANS= \
 ldms_authentication.man \
+ldms_auth_ovis.man \
+ldms_auth_naive.man \
 ldms_quickstart.man \
 Plugin_aries_mmr.man \
 Plugin_cray_system_sampler_variants.man \
