Cleaned up and extended ldms_plugins_list.sh for v4.
ldmsd -u becomes ldmsd -u <name>
name is a plugin name or one of all, sampler, store special names.
Added a man page for ldms-plugins and updated ldmsd.man which was
missing -u option.

--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -9,7 +9,7 @@ DISTCLEANFILES = $(bin_SCRIPTS)
 
 bin_SCRIPTS+= ldms_ban.sh
 bin_SCRIPTS+=  ldms-py-fptrans_test.sh
-bin_SCRIPTS += ldms_plugins_list.sh
+bin_SCRIPTS += ldms-plugins.sh
 bin_SCRIPTS += ldms-py-edac_test.sh
 bin_SCRIPTS += ldms-py-subset_test.sh
 bin_SCRIPTS += ldms-py-syslog.sh
