--- a/ldms/src/sampler/cray_system_sampler/Makefile.am
+++ b/ldms/src/sampler/cray_system_sampler/Makefile.am
@@ -2,7 +2,8 @@ lib_LTLIBRARIES =
 pkglib_LTLIBRARIES =
 
 CORE = ../../core
-AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I../.. @OVIS_LIB_INCDIR_FLAG@
+AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I../.. @OVIS_LIB_INCDIR_FLAG@ \
+   -I$(srcdir)/../../ldmsd
 AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
 
 COMMON_LIBADD = $(CORE)/libldms.la \
