revisions for consistency of samplers with RC

--- a/ldms/src/sampler/aries_mmr/Makefile.am
+++ b/ldms/src/sampler/aries_mmr/Makefile.am
@@ -3,8 +3,7 @@ lib_LTLIBRARIES =
 pkglib_LTLIBRARIES =
 
 CORE = ../../core
-AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I../.. @OVIS_LIB_INCDIR_FLAG@ \
-  -I$(srcdir)/../../ldmsd
+AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I../.. @OVIS_LIB_INCDIR_FLAG@ -I$(srcdir)/../../ldmsd
 AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
 BASE_INC = $(srcdir)/../
 BASE_LIBADD = ../libsampler_base.la
