--- a/ldms/src/sampler/Makefile.am
+++ b/ldms/src/sampler/Makefile.am
@@ -97,6 +97,10 @@ if ENABLE_LLNL
 SUBDIRS += llnl
 endif
 
+if ENABLE_KOKKOS
+SUBDIRS += kokkos
+endif
+
 if ENABLE_JOBINFO
 SUBDIRS += job_info
 endif
