Cleanup Kokkos makefile

--- a/ldms/src/sampler/kokkos/Makefile.am
+++ b/ldms/src/sampler/kokkos/Makefile.am
@@ -5,9 +5,9 @@ CORE = ../../core
 
 CFLAGS := $(filter-out -Werror, ${CFLAGS})
 
-AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir)/src/ldmsd -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@
-AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
-COMMON_LIBADD = $(CORE)/libldms.la @LDFLAGS_GETTIME@ -lovis_util
+AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I../.. @OVIS_LIB_INCDIR_FLAG@ -I$(srcdir)/../../ldmsd
+AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
+COMMON_LIBADD = $(CORE)/libldms.la -lovis_util
 
 BUILT_SOURCES = json_parser.h
 AM_YFLAGS = -d
