--- a/ldms/src/sampler/shm/mpi_profiler/Makefile.am
+++ b/ldms/src/sampler/shm/mpi_profiler/Makefile.am
@@ -1,5 +1,5 @@
 pkglib_LTLIBRARIES =
-bin_PROGRAMS = 
+bin_PROGRAMS =
 CORE = ../../core
 AM_CFLAGS = -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
@@ -21,6 +21,7 @@ mpi_profiler_wrapped_functions.c: Makefile wrap/wrap.py wrap/input.w userheader.
 	(python $(srcdir)/wrap/wrap.py -g -o mpi_profiler_wrapped_functions.c $(WRAPINPUT))
 
 #lib_LTLIBRARIES = libldms_mpi_profiler.la
-libldms_mpi_profiler_la_SOURCES = mpi_profiler.c mpi_profiler_configuration.c mpi_profiler_wrapped_functions.c mpi_profiler_func_list.c userheader.h
+nodist_libldms_mpi_profiler_la_SOURCES = mpi_profiler_wrapped_functions.c
+libldms_mpi_profiler_la_SOURCES = mpi_profiler.c mpi_profiler_configuration.c mpi_profiler_func_list.c userheader.h
 libldms_mpi_profiler_la_LIBADD = $(LIBADD) $(JOBID_LIBFLAGS) ../shm_util/liblshm.la -lm -lrt -lpthread
 pkglib_LTLIBRARIES += libldms_mpi_profiler.la
