--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldms-functions.in
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ldms-functions.in
@@ -105,6 +105,9 @@ check_genders_file() {
 	# do not rename these.
 	# renamed="ldmsaggd_interval_default:ldmsd_agg_interval_default ldmsaggd_offset_default:ldmsd_agg_offset_default"
 	renamed="ldmsaggd_stores:ldmsd_store_plugins ldmsd_metric_sets:ldmsd_metric_plugins ldmsaggd_store_csv:ldmsd_store_csv ldmsaggd_conn_thds:ldmsd_event_thds"
+	# common typos in prefixes here
+	prefixtypo="ldmsd_schema_:ldmsd_schemas_ ldmsd_exclude_schema_:ldmsd_exclude_schemas_ ldms_:ldmsd_ ldmsd_metric_plugin$:ldmsd_metric_plugins"
+	commatypo="clock cray_power_sampler fptrans lnet_stats job_info jobid meminfo perfevent procdiskstats procinterrupts procnetdev procnfs procsensors procstat sampler_atasmart sysclassib vmstat store_csv lustre2_client lustre2_mds lustre2_oss store_csv store_rabbitv3 store_flatfile store_sos"
 	n=0
 	v=""
 	for p in $consolidated; do
@@ -125,8 +128,26 @@ check_genders_file() {
 			v="$v, ${arr[0]}"
 		fi
 	done
+	for p in $prefixtypo; do
+		arr=(${p//:/ })
+		val=`$NODEATTR $NODEATTRFILE -l | grep ${arr[0]} 2>/dev/null`
+		if test -n "$val"; then
+			logger -p syslog.err "Correct gender(s) starting with ${arr[0]} to start with ${arr[1]}."
+			((n++))
+			v="$v, $val"
+		fi
+	done
+	for p in $commatypo; do
+		arr=(${p//:/ })
+		val=`$NODEATTR $NODEATTRFILE -l | grep ${arr[0]} 2>/dev/null`
+		if test -n "$val"; then
+			logger -p syslog.err "Found plugin name(s) as a gender: $val. Use : or & instead of , in ldmsd plugin lists, as noted in man ldms-attributes."
+			((n++))
+			v="$v, $val"
+		fi
+	done
 	if test $n -gt 0; then
-		logger -p syslog.err "Gender file problems: $n ($v). These genders need to be removed or replaced as noted."
+		logger -p syslog.err "Gender file problems: $n ($v). These genders need to be removed, replaced, correctly spelled, or punctuated as noted."
 		logger -p syslog.err "Review $NODEATTRFILE"
 		exit 1
 	fi
