backport missing man pages at user request

--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -2,6 +2,7 @@
 dist_man8_MANS= \
 ldms_build_install.man \
 ldms_ls.man \
+ldms-static-test.man \
 ldmsd.man \
 ldmsd_exits.man \
 ldmsd_controller.man \
@@ -17,7 +18,11 @@ Plugin_knc_sampler.man \
 Plugin_lnet_stats.man \
 Plugin_meminfo.man \
 Plugin_fptrans.man \
+Plugin_clock.man \
+Plugin_procstat.man \
+Plugin_sysclassib.man \
 Plugin_jobid.man \
+Plugin_lustre2_client.man \
 Plugin_msr_interlagos.man \
 Plugin_procinterrupts.man \
 Plugin_procnetdev.man \
@@ -32,10 +37,7 @@ dist_man7_MANS += Plugin_all_example.man
 endif
 
 pending_dist_man7_MANS= \
-Plugin_lustre2_client.man \
-Plugin_procsensors.man \
-Plugin_procstat.man \
-Plugin_sysclassib.man
+Plugin_procsensors.man
 
 dist_man7_MANS += Plugin_store_rabbitv3.man
 
