--- a/ldms/scripts/Makefile.am
+++ b/ldms/scripts/Makefile.am
@@ -4,15 +4,40 @@ EXTRA_DIST=@OVIS_EXTRA_DIST@
 
 if ENABLE_SCRIPTS
 bin_SCRIPTS= envldms.sh
+bin_SCRIPTS += ldms-static-test.sh
 
-# CLEANFILES = $(bin_SCRIPTS)
+DISTCLEANFILES = $(bin_SCRIPTS)
+OPV=-$(PACKAGE_VERSION)
 
-bin_SCRIPTS+= ldms_ban.sh
-bin_SCRIPTS+=  ldms-py-fptrans_test.sh
+bin_SCRIPTS += ldms_ban.sh
+bin_SCRIPTS += ldms-py-fptrans_test.sh
 bin_SCRIPTS += ldms_plugins_list.sh
 bin_SCRIPTS += ldms-py-edac_test.sh
 bin_SCRIPTS += ldms-py-subset_test.sh
 bin_SCRIPTS += ldms-py-syslog.sh
 bin_SCRIPTS += ldms-meminfo.sh
 bin_SCRIPTS += ldms-py-rename.sh
+bin_SCRIPTS += ldms-l2_test.sh
+
+install-data-local:
+	$(MKDIR_P) $(DESTDIR)$(docdir)$(OPV)/examples/static-test && \
+	uf=$(DESTDIR)$(docdir)$(OPV)/examples/static-test/.uninst.ldms && \
+	touch $$uf && \
+	for f in $(srcdir)/examples/* ; do \
+		if test "$$f" = "$(srcdir)/examples/README"; then \
+			continue; \
+		fi; \
+		$(INSTALL_DATA) $$f $(DESTDIR)$(docdir)$(OPV)/examples/static-test; \
+		echo $$(basename $$f) >> $$uf; \
+	done
+	$(INSTALL_DATA) $(srcdir)/examples/.canned $(DESTDIR)$(docdir)$(OPV)/examples/static-test
+
+uninstall-local:
+	echo removing files:
+	while read f; do \
+		echo $$f; \
+		$(RM) $(DESTDIR)$(docdir)$(OPV)/examples/static-test/$$f; \
+	done < $(DESTDIR)$(docdir)$(OPV)/examples/static-test/.uninst.ldms
+	$(RM) $(DESTDIR)$(docdir)$(OPV)/examples/static-test/.canned
+	$(RM) $(DESTDIR)$(docdir)$(OPV)/examples/static-test/.uninst.ldms
 endif
