--- a/util/sample_init_scripts/genders/systemd/services/Makefile.am
+++ b/util/sample_init_scripts/genders/systemd/services/Makefile.am
@@ -1,10 +1,19 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders/systemd/services
 
-if ENABLE_LIBGENDERS
-dist_doc_DATA = \
-README.ldmsd \
-ldmsd.service \
-ldmsd@.service
+doc_DATA=ldmsd.service ldmsd@.service README.ldmsd
+
+EXTRA_DIST = ldmsd.service.in ldmsd@.service.in
+
+do_subst = @OVIS_SUBST_RULE@
+
+ldmsd.service: ldmsd.service.in
+	$(do_subst) < $< > $@
+
+ldmsd@.service: ldmsd@.service.in
+	$(do_subst) < $< > $@
+
+if ENABLE_TOSS_SYSTEMD
+dist_doc_DATA = README.ldmsd
 endif
 
