--- a/util/sample_init_scripts/genders/sysv/etc/init.d/Makefile.am
+++ b/util/sample_init_scripts/genders/sysv/etc/init.d/Makefile.am
@@ -1,7 +1,10 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders/sysv/etc/init.d
 
-if ENABLE_LIBGENDERS
+EXTRA_DIST = ldmsd.in ldmsd.template.in
+DISTCLEANFILES = ldmsd ldmsd.template
+
+if ENABLE_TOSS_SYSTEMD
 dist_doc_DATA = \
 README \
 ldmsd \
