--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/Makefile.am
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/Makefile.am
@@ -1,7 +1,10 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d
 
-if ENABLE_LIBGENDERS
+EXTRA_DIST = ldmsd.in ldms-functions.in
+DISTCLEANFILES = ldmsd ldms-functions
+
+if ENABLE_TOSS_SYSTEMD
 SUBDIRS = plugins-conf ClusterGenders ClusterSecrets
 dist_doc_DATA = \
 ldmsd \
