quiet expected warning rpm users dislike

--- a/util/relocation/relocate-paths.sh.in
+++ b/util/relocation/relocate-paths.sh.in
@@ -59,7 +59,7 @@ do
 			gzip -f $file
 		fi
 	else
-		echo "File \"$file\" not found, skipping"
+		: echo "File \"$file\" not found, skipping" ;# expected case
 		continue
 	fi
 done
