include agg example based on user feedback

--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ClusterGenders/Makefile.am
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/ClusterGenders/Makefile.am
@@ -3,6 +3,6 @@ docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders/systemd/
 
 if ENABLE_TOSS_SYSTEMD
 dist_doc_DATA = \
-README genders.local
+README genders.local genders.agg
 endif
 
