--- a/ldms/man/Makefile.am
+++ b/ldms/man/Makefile.am
@@ -16,6 +16,7 @@ ldms_auth_munge.man \
 ldms_auth_naive.man \
 ldms_quickstart.man \
 ldms_sampler_base.man \
+ldmsd_failover.man \
 Plugin_aries_linkstatus.man \
 Plugin_aries_mmr.man \
 Plugin_array_example.man \
